{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 116,
  "lineage": "30c12b9a-b53a-e5fa-d364-a336d81e8ecd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "gitlab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00831fc7c1e3ddc60",
            "arn": "arn:aws:ec2:us-west-1:543745842878:instance/i-057680efe8cc35f0e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdh",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:543745842878:key/ae2a147e-9fc8-476f-a3fe-81b2b749ab11",
                "tags": {
                  "Name": "test1-qa"
                },
                "throughput": 0,
                "volume_id": "vol-0c139c854724a8111",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-057680efe8cc35f0e",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "glr-gitlab-qa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a55a5464d95ea4a5",
            "private_dns": "ip-10-0-20-25.us-west-1.compute.internal",
            "private_ip": "10.0.20.25",
            "public_dns": "ec2-3-101-58-228.us-west-1.compute.amazonaws.com",
            "public_ip": "3.101.58.228",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-1:543745842878:key/ae2a147e-9fc8-476f-a3fe-81b2b749ab11",
                "tags": {
                  "Name": "test1-qa"
                },
                "throughput": 0,
                "volume_id": "vol-03ab1087980e563f2",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b15545a362ebebef",
            "tags": {
              "Name": "test1-qa"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f74d1c472062b8fc"
            ]
          },
          "dependencies": [
            "aws_security_group.sg-ec2-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-n",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/net/test1-alb-n-qa/02bdf3568011e66e",
            "arn_suffix": "net/test1-alb-n-qa/02bdf3568011e66e",
            "dns_name": "test1-alb-n-qa-02bdf3568011e66e.elb.us-west-1.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/net/test1-alb-n-qa/02bdf3568011e66e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "test1-alb-n-qa",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f51da334f825a9d"
              },
              {
                "subnet_id": "subnet-0b15545a362ebebef"
              }
            ],
            "subnets": [
              "subnet-04f51da334f825a9d",
              "subnet-0b15545a362ebebef"
            ],
            "vpc_id": "vpc-0b86cf9c2fca819e7",
            "zone_id": "Z24FKFUX50B4VW"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/net/test1-alb-n-qa/02bdf3568011e66e/09296eff3d84d12b",
            "certificate_arn": "arn:aws:acm:us-west-1:543745842878:certificate/375fe6d5-fbdd-4293-b75d-28ebd1c52f3f",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/test1-tg-n-qa/760dde8a50f3d502",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/net/test1-alb-n-qa/02bdf3568011e66e/09296eff3d84d12b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/net/test1-alb-n-qa/02bdf3568011e66e",
            "port": 443,
            "protocol": "TLS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-n",
            "aws_lb_target_group.tg-n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/net/test1-alb-n-qa/02bdf3568011e66e/6863c82801e10fb5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/test1-tg-n-qa/760dde8a50f3d502",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:listener/net/test1-alb-n-qa/02bdf3568011e66e/6863c82801e10fb5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:loadbalancer/net/test1-alb-n-qa/02bdf3568011e66e",
            "port": 22,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-n",
            "aws_lb_target_group.tg-n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg-n",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/test1-tg-n-qa/760dde8a50f3d502",
            "arn_suffix": "targetgroup/test1-tg-n-qa/760dde8a50f3d502",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/test1-tg-n-qa/760dde8a50f3d502",
            "lambda_multi_value_headers_enabled": false,
            "name": "test1-tg-n-qa",
            "port": 22,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-n",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/test1-tg-n-qa/760dde8a50f3d502-20210122123816055900000001",
            "port": 22,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:543745842878:targetgroup/test1-tg-n-qa/760dde8a50f3d502",
            "target_id": "i-057680efe8cc35f0e"
          },
          "dependencies": [
            "aws_instance.gitlab",
            "aws_lb_target_group.tg-n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-ec2-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:543745842878:security-group/sg-0f74d1c472062b8fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "190.236.198.58/32",
                  "190.237.43.82/32"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f74d1c472062b8fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "190.236.198.58/32",
                  "190.237.43.82/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32",
                  "190.237.43.82/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "190.236.198.58/32",
                  "190.237.43.82/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "test1-sg-qa",
            "name_prefix": "",
            "owner_id": "543745842878",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0b86cf9c2fca819e7"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}